--- a/hotel/src/main/resources/static/css/hotel.css
+++ b/hotel/src/main/resources/static/css/hotel.css
@@ -249,3 +249,23 @@ td{
     border: 1px solid #000000;
     border-collapse: collapse;
 }
+/* configuracoes footer */
+footer {
+    width: 100%;
+	font-family: "Montserrat Alternates", sans-serif;
+	-webkit-font-smoothing: antialiased;
+    font-size: 0.915em;
+}
+.copyright {
+	background: #171717;
+	overflow: hidden;
+	padding: 24px;
+	margin-top: 30px;
+}
+.copyright .copyright-text {
+	float: left;
+	font-size: 13px;
+	color: #9d9d9d;
+	font-weight: 600;
+	line-height: 28px;
+}
