--- a/hotel/src/main/resources/static/css/style.css
+++ b/hotel/src/main/resources/static/css/style.css
@@ -2102,6 +2102,9 @@ ol {
 	}
 }
 
+.formularioCompra.menosMarginPagamentoFuncionario{
+	margin-top: 140px;
+}
 .formularioCompra{
 	margin-top: 240px;
 }
@@ -2125,6 +2128,48 @@ ol {
 	padding: 60px 0 60px 0;
 	border-top: 3px solid #F9AD81;
 	border-bottom: 3px solid #F9AD81;
+}
+.navegacao.barraPesquisaCentralizada input{
+    margin-top: 10px;
+    margin-bottom: 40px;
+    border: 0;
+    padding: 0;
+}
+.navegacao input{
+    margin-top: 40px;
+    border: 0;
+    padding: 0;
+}
+.navegacao .inputs{
+    width: 40%;
+    margin: 0 auto 0 auto;
+}
+.navegacao .inputs .barra-pesquisa{
+    width: 65%;
+    height: 50px;
+    background-color: #EEEEEE;
+    font-size: 1.5em;
+    text-align: center;
+    padding: 0 10px 0 10px;
+}
+.barra-pesquisa::placeholder{
+    color: black;
+    font-family: 'Montserrat Alternates';
+    font-weight: 400;
+    font-style: normal;
+    text-align: center;
+}
+.navegacao .inputs .btnPesquisar{
+    width: 30%;
+    font-family: 'Montserrat Alternates';
+    height: 50px;
+    color: #FFF;
+    font-size: 1.2em;
+    background-color: #393939;
+
+}
+.branco{
+    color: #ffffff;
 }
 .negrito{
     font-weight: 600;
@@ -2341,3 +2386,55 @@ ol {
 	background-image:url(../img/logo_bandeiras_cartoes/mastercard_logo.svg);
 	position: absolute;
 } */
+select#quantidadeQuartos{
+	margin-right: 50px;
+}
+/*CABECALHO*/
+
+.cabecalho{
+    width: 100%;
+    height: 100px;
+    background-color: #393939;
+    display: flex;
+    flex-wrap: wrap;
+}
+.cabecalho div{
+    display: flex;
+    align-items: center;
+}
+.cabecalho div.nomedoHotel{
+    width: 15%;
+    margin-left: 5%;
+}
+.cabecalho a{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+.cabecalho div.logoHome{
+    width: 64px;
+}
+.cabecalho div.nomeSair{
+    width: 70%;
+    justify-content: flex-end;
+}
+.cabecalho h1{
+    font-size: 40px;
+    margin: 15px 0 5px 0;
+}
+.cabecalho h3{
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 300;
+    font-family: 'Montserrat Alternates';
+}
+.cabecalho div button{
+    background-color: #EEEEEE;
+    font-family: 'Montserrat Alternates';
+    border: 0;
+    width: 130px;
+    height: 65px;
+    font-size: 20px;
+    margin: 0 40px 0 30px;
+}
