mostrar no senac, para melhor entendimento

--- a/hotel/src/main/resources/static/css/hotel.css
+++ b/hotel/src/main/resources/static/css/hotel.css
@@ -194,6 +194,7 @@ form{
 }
 .pointer{
     cursor: pointer;
+    width: 450px;
 }
 /* luiz_eduardo */
 .cadastroCentro{
@@ -215,6 +216,14 @@ form{
     text-align: center;
     display: inline;
     margin-left: 30%;
+}
+.nomeNovoCargoPermissao{
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 29px;
+    text-align: center;
+    display: inline;
+    margin-left: 320px;
 }
 .inputCadastroCargo{
     display: inline;
