--- a/hotel/src/main/resources/static/css/hotel.css
+++ b/hotel/src/main/resources/static/css/hotel.css
@@ -279,6 +279,7 @@ footer {
     text-align: center;
 }
 .popup{
+    visibility: hidden;
     background-color: rgba(0,0,0,0.6);
     width: 100%;
     height: 100%;
@@ -287,9 +288,10 @@ footer {
     left: 0;
     right: 0;
     bottom: 0;
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
+    transition: all .2s ease-in-out;
 }
 .botaoPopup{
     cursor: pointer;
@@ -321,4 +323,12 @@ footer {
     margin-left: 15px;
     font-size: 25px;
 }
-footer .footerTabela
+.footerTabela {
+    position: relative;
+    margin-top: auto;
+}
+.show {
+    visibility: visible;
+    z-index: 200;
+    opacity: 1;
+}
