--- a/hotel/src/main/resources/static/css/hotel.css
+++ b/hotel/src/main/resources/static/css/hotel.css
@@ -289,7 +289,6 @@ footer {
     right: 0;
     bottom: 0;
     display: flex;
-    justify-content: center;
     align-items: center;
     transition: all .2s ease-in-out;
 }
@@ -298,30 +297,33 @@ footer {
 }
 .editarPopup{
     width: 30%;
-    height: 350px;
-    background-color: white;
+    min-height: 300px;
+    max-height: 900px;
+    background-color: lightgray;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    border-radius: 5px;
 }
 .editarPopup input[type="text"]{
+    width: 100%;
+    height: 30px;
     
 }
+.imgEditar{
+    width: 36px;
+    height: 36px;
+    margin-left: 460px;
+    }
 .editarPopup .headerPopup{
     width: 100%;
     height: 20%;
-    border-bottom: 1px solid black;
-    display: flex;
-    flex-flow: column wrap;
-    align-content: space-between;
+    text-align: center;
+    margin-bottom: 20px;
 }
 .editarPopup .headerPopup .tituloPopup{
-    text-align: left;
-    margin-top: auto;
-    margin-bottom: 15px;
-    margin-left: 15px;
-    font-size: 25px;
+    font-size: 40px;
+    font-family: 'Montserrat Alternates';
 }
 .footerTabela {
     position: relative;
@@ -331,4 +333,48 @@ footer {
     visibility: visible;
     z-index: 200;
     opacity: 1;
+}
+.inputPopup .title-input{
+    margin-bottom: 10px;
+    font-size: 23.5px;
+    font-family: 'Montserrat Alternates';
+    font-weight: bold;
+}
+.inputpopupForm{
+    padding: 0px;
+    border: 0 none;
+    outline: none;
+    border-radius: 5px;   
+}
+.editarPopup .inputPopup{
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'Montserrat Alternates';
+    margin-bottom: 20px;
+    width: 80%;
+    height: 80px;
+}   
+.footerPopup{
+    display: flex;
+    width: 100%;
+    height: 100px;
+    justify-content: space-around;
+}
+.buttonPopup{
+    width: 38%;
+    height: 55px;
+    border: 0 none;
+    font-size: large;
+    font-weight: bold;
+    font-family: 'Montserrat Alternates';
+    border-radius: 5px;
+}
+.buttonSuccess{
+    background-color: #00FF00;
+}
+.buttonCancel{
+    background-color: #B22222;
+}
+.buttonPopup button[type="button"]{
+    font-weight: bold;
 }
