--- a/hotel/src/main/resources/static/css/hotel.css
+++ b/hotel/src/main/resources/static/css/hotel.css
@@ -295,7 +295,7 @@ footer {
 .botaoPopup{
     cursor: pointer;
 }
-.editarPopup{
+#editarPopup{
     width: 30%;
     min-height: 300px;
     max-height: 900px;
@@ -305,7 +305,7 @@ footer {
     flex-direction: column;
     border-radius: 5px;
 }
-.editarPopup input[type="text"]{
+#editarPopup input[type="text"]{
     width: 100%;
     height: 30px;
     
@@ -315,13 +315,13 @@ footer {
     height: 36px;
     margin-left: 460px;
     }
-.editarPopup .headerPopup{
+#editarPopup .headerPopup{
     width: 100%;
     height: 20%;
     text-align: center;
     margin-bottom: 20px;
 }
-.editarPopup .headerPopup .tituloPopup{
+#editarPopup .headerPopup .tituloPopup{
     font-size: 40px;
     font-family: 'Montserrat Alternates';
 }
@@ -346,7 +346,7 @@ footer {
     outline: none;
     border-radius: 5px;   
 }
-.editarPopup .inputPopup{
+#editarPopup .inputPopup{
     margin-left: auto;
     margin-right: auto;
     font-family: 'Montserrat Alternates';
