--- a/hotel/src/main/resources/static/css/style.css
+++ b/hotel/src/main/resources/static/css/style.css
@@ -2244,8 +2244,8 @@ ol {
 .cadastro input[type=submit].botaoFuncionarioComum{
 	display: flex;
 	justify-content: center;
-	margin: 100px 0 0 0;
-    width: 50%;
+	margin: 20px 0 30px 0;
+    width: 60%;
 	height: 100px;
     border: 0;
     color: #ffffff;
@@ -2255,8 +2255,8 @@ ol {
 .cadastro input[type=submit].botaoFuncionarioAdmin{
 	display: flex;
 	justify-content: center;
-    width: 50%;
-	height: 50px;
+    width: 60%;
+	height: 70px;
     border: 0;
     color: #ffffff;
     font-family: 'Montserrat Alternates';
@@ -2265,7 +2265,7 @@ ol {
 .cadastro input[type=submit].botaoFuncionarioSistemaAdmin{
 	display: flex;
 	justify-content: center;
-    width: 50%;
+    width: 60%;
 	height: 50px;
     border: 0;
     color: #ffffff;
@@ -2274,6 +2274,7 @@ ol {
 }
 .cadastro input.botaoFuncionarioComum{
 	display: flex;
+	line-height: 35px;
 	background-color: #F9AD81;
 	color: #FFF;
 }
